--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <!-- <link rel="icon" type="image/svg+xml" href="/vite.svg" /> -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="keywords" content="Classic car restoration, Muscle car restoration, Automotive repair services, Vintage car restoration, Car restoration company, Classic car repair, Muscle car repair, Custom car restoration, Auto restoration services, Vintage auto repair, Classic vehicle restoration, Muscle car rebuild, Car restoration specialists, Automotive restoration experts, Classic and muscle car services, High-performance car restoration, Restoration services for classic cars, Muscle car restoration services, Vintage car repair services, Antique car restoration and repair, Full-service car restoration, Professional car restoration, Best classic car restoration, Award-winning car restoration, Classic car maintenance">
+    <meta name="description" content="Specializing in muscle and classic car restoration and repair, our company brings your cherished vehicles back to their original glory. With expert craftsmanship and a passion for automotive excellence, we offer comprehensive restoration, custom rebuilds, and meticulous repair services. Trust us to rejuvenate your vintage car with precision and care. Discover the ultimate in classic car restoration and experience award-winning service tailored to enthusiasts.">
     <title>Muscle Tuners And Builders</title>
   </head>
   <body>
